# mcp-server-box

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
docs/: box_tools_ai.md  box_tools_collaboration.md  box_tools_docgen.md  box_tools_files.md  box_tools_folders.md  box_tools_generic.md  box_tools_groups.md  box_tools_metadata.md  box_tools_search.md  box_tools_shared_links.md  box_tools_users.md  box_tools_web_link.md  delegated_auth_mode.md
k8s/: deployment.yaml
src/: box_tools_collaboration.py  box_tools_files.py  box_tools_groups.py  box_tools_shared_links.py  box_tools_users.py  box_tools_web_link.py  config.py  error_utils.py  mcp_server_box.py  middleware.py  server.py  server_context.py
src/tool_registry/: __init__.py  ai_tools.py  collaboration_tools.py  doc_gen_tools.py  file_tools.py  folder_tools.py  generic_tools.py  group_tools.py  metadata_tools.py  search_tools.py  shared_link_tools.py  user_tools.py  web_link_tools.py
src/tools/: box_tools_ai.py  box_tools_collaboration.py  box_tools_docgen.py  box_tools_files.py  box_tools_folders.py  box_tools_generic.py  box_tools_groups.py  box_tools_metadata.py  box_tools_search.py  box_tools_shared_links.py  box_tools_users.py  (+1 more)
tests/: test_box_shared_links.py  test_box_tools_ai.py  test_box_tools_collaboration.py  test_box_tools_docgen.py  test_box_tools_files.py  test_box_tools_folders.py  test_box_tools_generic.py  test_box_tools_groups.py  test_box_tools_metadata.py  test_box_tools_search.py  test_box_tools_users.py  test_box_tools_weblink.py  test_mcp_server_box.py
