[project]
name = "mcp-server-box"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "box-ai-agents-toolkit>=0.0.54",
    "fastapi>=0.118.0",
    "mcp[cli]>=1.15.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-asyncio>=0.26.0", "pytest-cov>=6.1.0"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
